# PBINFO

./: .gitignore  CMakeLists.txt
PaulSomesan/1025MergeSort/: main.cpp
PaulSomesan/111NrFactori/: main.cpp
PaulSomesan/112FractieMiniima/: main.cpp
PaulSomesan/1192Arhitectura2/: main.cpp
PaulSomesan/1300HEX/: main.cpp
PaulSomesan/1365AceeasiParitate/: main.cpp
PaulSomesan/1366Aceeasi_paritate_2/: main.cpp
PaulSomesan/1409Numere11/: main.cpp
PaulSomesan/162PermCirc/: main.cpp
PaulSomesan/1981DivizoriSir/: main.cpp
PaulSomesan/2221Cifre_03/: main.cpp
PaulSomesan/2306Numere22/: main.cpp
PaulSomesan/2371Biliard/: main.cpp
PaulSomesan/241Interclasare/: main.cpp
PaulSomesan/2420EasyRow/: main.cpp
PaulSomesan/250Interclasare1/: main.cpp
PaulSomesan/2745intrebari/: main.cpp
PaulSomesan/2748Patrula3/: main.cpp
PaulSomesan/280PalMax/: main.cpp
PaulSomesan/2820Sir11/: main.cpp
PaulSomesan/306Zerouri/: main.cpp
PaulSomesan/307Zerouri1/: main.cpp
PaulSomesan/3246Echilibrat/: main.cpp
PaulSomesan/3404Produse/: main.cpp
PaulSomesan/3625PrelCifre/: main.cpp
PaulSomesan/388NrDivPari/: main.cpp
PaulSomesan/3905SumaPerm/: main.cpp
PaulSomesan/3926Alternant/: main.cpp
PaulSomesan/4215Alipit/: main.cpp
PaulSomesan/4330Divizori7/: main.cpp
PaulSomesan/4332PrimMinMax/: main.cpp
PaulSomesan/440Fact01/: main.cpp
PaulSomesan/443DivizoriPrimi/: main.cpp
PaulSomesan/445PseudoPerfect/: main.cpp
PaulSomesan/4481PrefixSufixMax/: main.cpp
XI/: Aranjamente.cpp  Combinations.cpp  Permutari.cpp  toatessubmultimile.cpp
(+91 files in other folders)
